5/18 clean up